Various graphic improvments

--- a/home.html
+++ b/home.html
@@ -110,7 +110,7 @@
         </ul>
     </div>
 	</div>
-	<a id="bottone" href="javascript:admin();">ADMIN</a> <a id="bottone" href="javascript:info();">API</a>
+<center>	<a id="bottone" href="javascript:admin();">ADMIN</a> <a id="bottone" href="javascript:info();">API</a></center>
 </body>
 
 </html>
