--- a/info/chimica.html
+++ b/info/chimica.html
@@ -11,7 +11,7 @@
 <body>
 
     <div>
-      <h2>Biblioteca di Chimica </h2>
+			<h1><img src="./img/sapienza.jpg" alt="Logo sapienza" width=40% height=20% style="margin-right: 20%">Biblioteca di Chimica</h1>
       <br><br>
     <p2> La Biblioteca "Gabriello Illuminati" si è trasferita (per lavori di ristrutturazione) al terzo piano dell’edificio Caglioti del Dipartimento di Chimica.
       L’accesso alla biblioteca è consentito a tutti gli interessati alla consultazione di periodici, trattati, collane etc., reperibili presso la biblioteca.
@@ -32,6 +32,17 @@
   I testi in consultazione devono essere restituiti al momento di lasciare la biblioteca o comunque almeno 30 minuti prima della chiusura giornaliera.</p2>
 <br>
 <br>
+
+<h3>COME ARRIVARE:</h3>
+<p2>
+Dalla Stazione Termini:<br>
+BUS:310 o 649 <br>
+Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
+</p2>
+ <br>
+<form action="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
+    <input type="submit" value="Google Maps" />
+</form><br><br>
 
 <h3> Note Storiche:</h3>
 <p2> Le origini dell'attuale biblioteca del dipartimento di Chimica risalgono all'anno 1872 quando Stanislao Cannizzaro venne chiamato a Roma e tenne presso l'Ateneo i corsi di chimica inorganica e organica, diresse la scuola pratica e organizzò un Istituto di chimica ben attrezzato. Ebbe la sua sede, per sessanta anni circa, nell'orto del vecchio convento di S. Lorenzo in Panisperna (via Panisperna 89) sino a quando, nel corso dell'anno accademico 1939-1940, l'Istituto e la biblioteca vennero trasferiti presso l'attuale città universitaria.
