--- a/info/fisica.html
+++ b/info/fisica.html
@@ -11,7 +11,7 @@
 <body>
 
     <div>
-      <h2>Biblioteca di Fisica </h2>
+			<h1><img src="./img/sapienza.jpg" alt="Logo sapienza" width=40% height=20% style="margin-right: 20%">Biblioteca di Fisica</h1>
       <br><br>
     <p2> La nuova sede della Biblioteca di Fisica è stata inaugurata nel 2005, dispone di due sale lettura con 90 posti complessivi
       (tutti dotati di presa di alimentazione elettrica per pc portatili), 2 computer con accesso diretto ad internet e di una serie
