--- a/info/geologia.html
+++ b/info/geologia.html
@@ -11,23 +11,24 @@
 <body>
 
     <div>
-      <h2>Biblioteca di Geologia </h2>
-      <br><br>
-    <p2> La biblioteca è situata all’interno della Città Universitaria e precisamente al piano terra del Dipartimento di Scienze della Terra
-       ed è accessibile dall’ingresso lato di Geologia.</p2>
+			<h1><img src="./img/sapienza.jpg" alt="Logo sapienza" width=40% height=20% style="margin-right: 20%">Biblioteca di Geologia</h1>
+      <br>
+			<br>
+    <p1> La biblioteca è situata all’interno della Città Universitaria e precisamente al piano terra del Dipartimento di Scienze della Terra
+       ed è accessibile dall’ingresso lato di Geologia.</p1>
 <br><br>
 <h3>Servizi:</h3>
 
 <p2>
 L’accesso alla biblioteca è pubblico. Per usufruire dei servizi è necessario iscriversi compilando un modulo con l’indicazione dei propri dati personali (che verranno trattati conformemente alla legislazione vigente sulla privacy) e consegnando una fotocopia di un documento di identità valido.<br>
-Al momento dell’iscrizione verrà fornito all’utente un codice che gli permetterà l’accesso ai servizi di tutte le biblioteche della Sapienza.
+Al momento dell’iscrizione verrà fornito all’utente un codice che gli permetterà l’accesso ai servizi di tutte le biblioteche della Sapienza.<br><br>
 
 <h3>CONSULTAZIONE PC:</h3> Sono a disposizione dell'utenza 4 computer, utilizzabili in modalità wireless, per la consultazione dei cataloghi in linea, delle banche dati e dei periodici on-line, e per ricerche attraverso le varie risorse elettroniche dell’Ateneo. Tutti i locali della biblioteca sono comunque coperti dalla rete wireless di Ateneo che consente l’accesso al web mediante autenticazione attraverso la password di Infostud.
-
+<br><br>
 <h3>CONSULTAZIONE MATERIALE LIBRARIO E CARTOGRAFICO:</h3> Tutto il materiale librario e cartografico conservato dalla biblioteca è consultabile negli orari di apertura dei servizi previa consegna di un documento di identità. Detto materiale deve essere trattato con la massima cura e riconsegnato almeno 15 minuti prima della chiusura dei servizi. Per la consultazione del materiale antico è necessario prendere preliminarmente contatti con il personale della biblioteca.
-
-<h3>PRESTITO:</h3> per accedere a questi servizi è necessario essere iscritti alla biblioteca
-
+<br><br>
+<h3>PRESTITO:</h3> Per accedere a questi servizi è necessario essere iscritti alla biblioteca.
+<br><br>
 <h3>PRESTITO LOCALE:</h3> Di norma possono essere prestati al massimo due volumi per la durata di 15 giorni rinnovabili una sola volta (qualora il documento non sia stato già prenotato da altri). Il prestito locale è personale, l’utente è responsabile dei documenti ricevuti e della loro integrità e non può prestare ad altri le opere ricevute in prestito. L’utente è tenuto a rispettare la data di scadenza del prestito altrimenti, dopo opportuni solleciti, sarà sospeso dal servizio presso tutte le biblioteche del Polo La Sapienza, inizialmente per 30 giorni e, trascorso questo termine, a tempo indeterminato (art. 58 del D.P.R. 417/1995). In caso di smarrimento, o di grave deterioramento, di un documento della biblioteca, l’utente è tenuto a sostituirlo con una nuova copia, se ancora in commercio, o con un documento di pari valore, se esaurito.</p2>
 <br>
 <br>
@@ -48,9 +49,10 @@ Un terzo dei posti a sedere è riservato agli studenti iscritti ai corsi di stud
 </p2>
 <br>
 <br>
+<center>
     <h3> Foto: </h3>
 
-<img src="./img/biblio_geologia.jpg" alt="Esterno e Interni">
+<img src="./img/biblio_geologia.jpg" alt="Esterno e Interni" ></center>
 
 <br>
 <br>
