--- a/info/alessandrina.html
+++ b/info/alessandrina.html
@@ -9,17 +9,16 @@
 </head>
 
 <body>
-
-    <div>
-      <h2>Biblioteca Alessandrina </h2>
-      <br><br>
+	<div>
+        <h1><img src="./img/sapienza.jpg" alt="Logo sapienza" width=40% height=20% style="margin-right: 20%"> Biblioteca Alessandrina </h1>
+			<br><br>
     <p2>La Biblioteca Alessandrina, che è un istituto del Ministero per i  Beni e Attività Culturali, mette a disposizione degli studenti universitari un certo numero di posti per studiare con i propri libri. Essendo tale numero limitato, è necessario occupare un solo posto.
 In biblioteca  si parla a voce bassa per non disturbare chi studia, non si sosta nei corridoi e non si usa il telefono cellulare, che dovrebbe essere spento prima di entrare. Il computer situato nel corridoio è adibito esclusivamente alla consultazione del catalogo online della biblioteca. In nessun locale è permesso introdurre cibi bevande.
 Il rispetto del regolamento interno e osservare le più comuni norme di  buona educazione renderà possibile un servizio migliore.</p2>
 <br><br>
 <h3>Servizi:</h3>
-
-<p2><p3>Per cercare un libro o un periodico:</p3><br>
+<br>
+<p2><p3>Per cercare un libro o un periodico:</p3><br><br>
 
 La prima cosa da fare è consultare i cataloghi della Biblioteca tramite quello a schede,
  per le pubblicazioni catalogate prima del 1990,  e quello on-line, attraverso la postazione appositamente allestita,
@@ -46,7 +45,7 @@ Indirizzo: Piazzale Aldo Moro, 5 - 00185 Roma<br>
 Tel: 06/44740220 (Centralino)<br>
 
 Fax:06/44740222 <br>
-Email: <a href= "mailto://alessandrina@librari.beniculturali.it">alessandrina@librari.beniculturali.it</a><br>
+E-mail: <a href= "mailto://alessandrina@librari.beniculturali.it">alessandrina@librari.beniculturali.it</a><br>
 </p2>
 <br><br>
 <h3>COME ARRIVARE:</h3>
@@ -63,28 +62,37 @@ Dall'Aeroporto:<br>
 Treno fino alla Stazione di Termini  Bus 310 o 649<br>
 Treno fino alla Stazione di Tiburtina   Bus 492 o 71.<br>
 </p2>
+
 <br>
+<form action="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
+    <input type="submit" value="Google Maps" />
+</form><br><br>
+
+<h3> Note Storiche:</h3>
+<img src="./img/alessandro_vii.jpg" alt="Alessandro VII" width=15% height=15% style="margin: 10px">
 <br>
-    <h3> Note Storiche:</h3>
-<img src="./img/alessandro_vii.jpg" alt="Alessandro VII" width=15% height=15% style="float:left; margin: 10px">
+
 <p2>La Biblioteca Universitaria Alessandrina fu fondata nel 1667, su progetto e per volontà di Papa Alessandro VII, Fabio Chigi,
-   come biblioteca dello Studium Urbis. Il nucleo storico delle raccolte della biblioteca è costituito dai duplicati della biblioteca Chigiana (1644),
+   come biblioteca dello Studium Urbis. <br>
+	 Il nucleo storico delle raccolte della biblioteca è costituito dai duplicati della biblioteca Chigiana (1644),
     dai 423 duplicati della biblioteca Vaticana e da una parte della preziosa biblioteca dei duchi di Urbino (1666). Al cosiddetto "Fondo antico" si uniscono,
      a partire dal 1815, gli esemplari delle opere stampate nello Stato Pontificio e, dal 1870, gli esemplari di quelle stampate da tipografie della provincia
-     di Roma. Attualmente, in base a quanto previsto dalla L.106/2004, la Regione Lazio ha individuato la Biblioteca Universitaria Alessandrina come istituto
-     per il deposito legale dei documenti di interesse culturale destinati all'uso pubblico, pubblicati da editori della Provincia di Roma.
+     di Roma.<br>
+		  Attualmente, in base a quanto previsto dalla L.106/2004, la Regione Lazio ha individuato la Biblioteca Universitaria Alessandrina come istituto
+     per il deposito legale dei documenti di interesse culturale destinati all'uso pubblico, pubblicati da editori della Provincia di Roma.<br>
      Nel 1935, con il trasferimento dall'antico Palazzo della Sapienza di Corso Rinascimento alla nuova sede dall'interno della Città Universitaria,
      vengono depositate nell'Alessandrina le preesistenti biblioteche delle Facoltà di Lettere, Giurisprudenza e Scienze politiche. Successivamente,
       importanti donazioni (Fondo Vittorio Rossi, Fondo Schupfer, Fondo Chiovenda...) sottolineano l'esistenza di un rapporto vitale fra l'istituzione e
-      la cultura accademica. L'Alessandrina può oggi definirsi importante biblioteca di cultura generale con prestigiose collezioni storiche, prevalente
+      la cultura accademica. <br>L'Alessandrina può oggi definirsi importante biblioteca di cultura generale con prestigiose collezioni storiche, prevalente
       specializzazione umanistica ed interessanti e pressoché esaustive testimonianze sull'editoria e tipografia romana otto-novecentesca.
-
+<br>
     La Biblioteca Universitaria Alessandrina  è una biblioteca pubblica statale che dipende, dal 1975, dal Ministero per i Beni e le Attività Culturali.</p2>
 <br>
+
 <br>
 
 
-<a href= "http://www.alessandrina.librari.beniculturali.it/index.php?it/4/la-storia-della-biblioteca" >Fonte</a>
+<a href= "http://www.alessandrina.librari.beniculturali.it/index.php?it/4/la-storia-della-biblioteca" >Fonte</a> <br>
   </div>
 </body>
 
