--- a/info/alessandrina.html
+++ b/info/alessandrina.html
@@ -9,34 +9,31 @@
 </head>
 
 <body>
+	<img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%"><img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
 	<div>
-        <h1><img src="./img/sapienza.jpg" alt="Logo sapienza" width=40% height=20% style="margin-right: 20%"> Biblioteca Alessandrina </h1>
-			<br><br>
-    <p2>La Biblioteca Alessandrina, che è un istituto del Ministero per i  Beni e Attività Culturali, mette a disposizione degli studenti universitari un certo numero di posti per studiare con i propri libri. Essendo tale numero limitato, è necessario occupare un solo posto.
-In biblioteca  si parla a voce bassa per non disturbare chi studia, non si sosta nei corridoi e non si usa il telefono cellulare, che dovrebbe essere spento prima di entrare. Il computer situato nel corridoio è adibito esclusivamente alla consultazione del catalogo online della biblioteca. In nessun locale è permesso introdurre cibi bevande.
-Il rispetto del regolamento interno e osservare le più comuni norme di  buona educazione renderà possibile un servizio migliore.</p2>
+		<h1>Biblioteca Alessandrina </h1>
+			<p2>La Biblioteca Alessandrina, che è un istituto del Ministero per i  Beni e Attività Culturali, mette a disposizione degli studenti universitari un certo numero di posti per studiare con i propri libri. Essendo tale numero limitato, è necessario occupare un solo posto.
+			In biblioteca  si parla a voce bassa per non disturbare chi studia, non si sosta nei corridoi e non si usa il telefono cellulare, che dovrebbe essere spento prima di entrare. Il computer situato nel corridoio è adibito esclusivamente alla consultazione del catalogo online della biblioteca. In nessun locale è permesso introdurre cibi bevande.
+			Il rispetto del regolamento interno e osservare le più comuni norme di  buona educazione renderà possibile un servizio migliore.</p2>
 <br><br>
-<h3>Servizi:</h3>
+<h3>SERVIZI:</h3>
 <br>
-<p2><p3>Per cercare un libro o un periodico:</p3><br><br>
-
-La prima cosa da fare è consultare i cataloghi della Biblioteca tramite quello a schede,
- per le pubblicazioni catalogate prima del 1990,  e quello on-line, attraverso la postazione appositamente allestita,
- all'indirizzo <a href= "http://opacbiblioroma.caspur.it/">http://opacbiblioroma.caspur.it/</a> per i volumi entrati in biblioteca dopo il 1990.<br>
-
-Per usufruire del servizio di prestito è necessario iscriversi dimostrando di essere residenti nella regione Lazio e presentando all'Ufficio
+	<p3>Per cercare un libro o un periodico:</p3><br>
+	<p2>La prima cosa da fare è consultare i cataloghi della Biblioteca tramite quello a schede,
+ per le pubblicazioni catalogate prima del 1990, e quello <a href= "http://opacbiblioroma.caspur.it/">on-line</a>, attraverso la postazione appositamente allestita,
+  per i volumi entrati in biblioteca dopo il 1990.<br>
+<p3>Per usufruire del servizio di prestito:</p3> <br>
+	È necessario iscriversi dimostrando di essere residenti nella regione Lazio e presentando all'Ufficio
  Prestito un documento d'identità accompagnato da due fotografie formato tessera; per i non residenti nella regione, purchè studenti presso
  una delle Università del Lazio,  occorre anche esibire le ultime tasse universitarie pagate.
-
 Non si effettuano fotocopie di pubblicazioni anteriori al 1950 compreso. <br>
 Se si è interessati a redigere una bibliografia, identificare opere di cui non si hanno dati precisi,
  o che non sono presenti in biblioteca e vanno quindi reperite altrove, e per qualsiasi altra informazione è possibile rivolgersi  a
  ll'Ufficio Informazioni Bibliografiche. <br>
-
+<p3>Free Wi-Fi:</p3> <br>
 In biblioteca è attiva un'area wireless per tutti coloro che possiedono la password dell'Università "La Sapienza", che permette di navigare liberamente in internet sui propri computer o su quelli che la Biblioteca mette a disposizione degli utenti. Dal  computer destinato al pubblico  è possibile accedere solo ai siti culturali selezionati nel programma Preferiti : opac della biblioteca, SBN, Internet culturale.</p2>
-<br>
-<br>
-<h3>Dove siamo:</h3>
+<br><br>
+<h3>DOVE SIAMO:</h3>
 
 <p2>
 La Biblioteca si trova all'interno dell Città Universitaria dell'Università degli Studi di Roma La Sapienza, al 4. piano del Palazzo del Rettorato.<br>
@@ -47,33 +44,27 @@ Tel: 06/44740220 (Centralino)<br>
 Fax:06/44740222 <br>
 E-mail: <a href= "mailto://alessandrina@librari.beniculturali.it">alessandrina@librari.beniculturali.it</a><br>
 </p2>
-<br><br>
+<br>
 <h3>COME ARRIVARE:</h3>
+<br>
+	<p3>Dalla Stazione Termini:</p3><br>
+	<p2>BUS:310 o 649 <br>
+		Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
+		Dalla Stazione Tiburtina:<br>
+		BUS:492 o 71 o 163<br></p2>
 
-<p2>
-Dalla Stazione Termini:<br>
-BUS:310 o 649 <br>
-Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
-
-Dalla Stazione Tiburtina:<br>
-BUS:492 o 71 o 163<br>
-
-Dall'Aeroporto:<br>
-Treno fino alla Stazione di Termini  Bus 310 o 649<br>
-Treno fino alla Stazione di Tiburtina   Bus 492 o 71.<br>
-</p2>
-
+<p3>Dall'Aeroporto:</p3><br>
+<p2>Treno fino alla Stazione di Termini  Bus 310 o 649<br>
+Treno fino alla Stazione di Tiburtina   Bus 492 o 71.<br></p2>
 <br>
 <form action="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
     <input type="submit" value="Google Maps" />
-</form><br><br>
+</form><br>
 
-<h3> Note Storiche:</h3>
-<img src="./img/alessandro_vii.jpg" alt="Alessandro VII" width=15% height=15% style="margin: 10px">
-<br>
-
-<p2>La Biblioteca Universitaria Alessandrina fu fondata nel 1667, su progetto e per volontà di Papa Alessandro VII, Fabio Chigi,
-   come biblioteca dello Studium Urbis. <br>
+	<img src="./img/alessandro_vii.jpg" alt="Alessandro VII" style="width:15%; height:15%; margin: 10px; float:left;">
+	<h3> Note Storiche:</h3>
+	<p2>
+	La Biblioteca Universitaria Alessandrina fu fondata nel 1667, su progetto e per volontà di Papa Alessandro VII, Fabio Chigi, come biblioteca dello Studium Urbis.
 	 Il nucleo storico delle raccolte della biblioteca è costituito dai duplicati della biblioteca Chigiana (1644),
     dai 423 duplicati della biblioteca Vaticana e da una parte della preziosa biblioteca dei duchi di Urbino (1666). Al cosiddetto "Fondo antico" si uniscono,
      a partire dal 1815, gli esemplari delle opere stampate nello Stato Pontificio e, dal 1870, gli esemplari di quelle stampate da tipografie della provincia
@@ -85,14 +76,12 @@ Treno fino alla Stazione di Tiburtina   Bus 492 o 71.<br>
       importanti donazioni (Fondo Vittorio Rossi, Fondo Schupfer, Fondo Chiovenda...) sottolineano l'esistenza di un rapporto vitale fra l'istituzione e
       la cultura accademica. <br>L'Alessandrina può oggi definirsi importante biblioteca di cultura generale con prestigiose collezioni storiche, prevalente
       specializzazione umanistica ed interessanti e pressoché esaustive testimonianze sull'editoria e tipografia romana otto-novecentesca.
-<br>
     La Biblioteca Universitaria Alessandrina  è una biblioteca pubblica statale che dipende, dal 1975, dal Ministero per i Beni e le Attività Culturali.</p2>
 <br>
 
 <br>
 
-
-<a href= "http://www.alessandrina.librari.beniculturali.it/index.php?it/4/la-storia-della-biblioteca" >Fonte</a> <br>
+<center><h3><a href= "http://www.alessandrina.librari.beniculturali.it/index.php?it/4/la-storia-della-biblioteca" >Fonte</a></h3></center>
   </div>
 </body>
 
