--- a/info/chimica.html
+++ b/info/chimica.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-
+<img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%">	<img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
     <div>
-			<h1><img src="./img/sapienza.jpg" alt="Logo sapienza" width=40% height=20% style="margin-right: 20%">Biblioteca di Chimica</h1>
-      <br><br>
+			<h1>Biblioteca di Chimica</h1>
     <p2> La Biblioteca "Gabriello Illuminati" si è trasferita (per lavori di ristrutturazione) al terzo piano dell’edificio Caglioti del Dipartimento di Chimica.
       L’accesso alla biblioteca è consentito a tutti gli interessati alla consultazione di periodici, trattati, collane etc., reperibili presso la biblioteca.
       Sono a disposizione dell’utenza due sale per lo studio e la consultazione ed è attiva la attiva la rete Wi-Fi.</p2>
@@ -56,8 +55,7 @@ Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
 </p2>
 <br>
 <br>
-
-<a href= "https://www.chem.uniroma1.it/strutture/biblioteca" >Fonte</a>
+<center><h3><a href= "https://www.chem.uniroma1.it/strutture/biblioteca" >Fonte</a></h3></center>
   </div>
 </body>
 
