--- a/info/fisica.html
+++ b/info/fisica.html
@@ -9,32 +9,27 @@
 </head>
 
 <body>
-
-    <div>
-			<h1><img src="./img/sapienza.jpg" alt="Logo sapienza" width=40% height=20% style="margin-right: 20%">Biblioteca di Fisica</h1>
-      <br><br>
+	<img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%">	<img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
+	<div>
+	<h1>Biblioteca di Fisica</h1>
     <p2> La nuova sede della Biblioteca di Fisica è stata inaugurata nel 2005, dispone di due sale lettura con 90 posti complessivi
       (tutti dotati di presa di alimentazione elettrica per pc portatili), 2 computer con accesso diretto ad internet e di una serie
        di servizi, come la consultazione, il prestito, l’uso di pc fissi e  l’accesso alla rete wireless con il proprio PC portatile.
       Tali servizi sono rivolti sia agli utenti istituzionali che agli studenti che frequentano la nostra Università.</p2>
 <br><br>
-<h3>Servizi:</h3>
-
+<h3>SERVIZI:</h3>
 <p2>In biblioteca è possibile accedere ai servizi previa iscrizione, è inoltre permesso scaricare dal sito i testi didattici e
   le dispense per i corsi di studio in fisica.</p2>
 <br>
 <br>
-<h3>Ricerca bibliografica:</h3>
-
-<p2>Come effettuare una ricerca e quali sono i principali portali dove trovare informazioni bibliografiche
-   (dal catalogo della biblioteca ai cataloghi nazionali ed internazionali, dalla lista dei nostri argomenti
-   alle banche dati organizzate per discipline): alcuni suggerimenti su come localizzare i documenti necessari
-   e su come orientarsi in rete.</p2>
+<h3>RICERCA BIBLIOGRAFICA:</h3>
+<p2>Per effettuare una ricerca e per trovare informazioni bibliografiche dal catalogo della biblioteca ai cataloghi nazionali ed internazionali, dalla lista dei nostri argomenti
+   alle banche dati organizzate per discipline basta chiedere aiuto ai bibliotecari.
+ </p2>
 <br>
 <br>
-    <h3> Note Storiche:</h3>
-
-<img src="./img/blaserna.jpg" alt="Blaserna" style="float:left; margin: 10px"><p2>Quando <p3>  Pietro Blaserna</p3> venne chiamato a dirigere il Regio Istituto Fisico di Roma dal 1873 al 1918, trovò in
+    <h3> NOTE STORICHE:</h3>
+<img src="./img/blaserna.jpg" alt="Blaserna" style="float:left; margin: 10px;"><p2>Quando <p3>  Pietro Blaserna</p3> venne chiamato a dirigere il Regio Istituto Fisico di Roma dal 1873 al 1918, trovò in
 eredità dalla passata gestione il nucleo più antico dei libri che poi confluiranno nella attuale Biblioteca,
 il Fondo Volpicelli. Il fondo prendeva il nome da Paolo Volpicelli,
 vecchio professore di Fisica sperimentale all’Università di Roma e figura di transizione al nuovo Stato unitario.
@@ -52,20 +47,16 @@ Con la direzione di <p3>Orso Mario Corbino</p3> , dal 1918 al 1937, la Bibliotec
   funzionali alle attività dell’Ufficio del corista internazionale. Nel 1922 fecero il loro ingresso in Biblioteca numerose opere
 di relatività ristretta e generale oltre che di cosmologia. In Italia fino al 1915 nessuno dei maggiori fisici e matematici aveva
 infatti ritenuto di doversi occupare di relatività ristretta, mentre la relatività generale avrà accoglienza migliore.
-Della nuova generazione dei fisici teorici in Italia,<p3> Enrico Fermi</p3> ed Enrico Persico accolsero senza resistenze la relatività
+Della nuova generazione dei fisici teorici in Italia,<p3> Enrico Fermi</p3> ed <p3>Enrico Persico</p3> accolsero senza resistenze la relatività
 generale e tra il 1921 e il 1923 le dedicarono i primi lavori. Un riflesso di questa apertura favorita da Corbino si riscontra
  così nell’acquisizione massiccia nel 1922 di numerose opere sull’argomento tra le quali saggi di Einstein, Lorentz, H. Weyl, Lemeray,
   Eddington, E. Picard, Bloch, Marcolongo, H. Becquerel. Nel 1937 l’Istituto Fisico si trasferì nella attuale sede.
    Dopo gli anni bui della guerra, negli anni della ricostruzione, inizierà con Edoardo Amaldi
    un’altra fase di evoluzione per la Biblioteca, che rifletterà puntualmente i grandi eventi internazionali della fisica,
-   gli interessi e gli studi della comunità romana dei fisici.
-
-Prof.ssa
-Maria Grazia Ianniello.</p2>
+   gli interessi e gli studi della comunità romana dei fisici.<br><br>
+	 <center><p3> Articolo by Prof.ssa Maria Grazia Ianniello.</p3></center></p2>
 <br>
-<br>
-
-<a href= "http://www.phys.uniroma1.it/biblioteca/ita/ST/storia.html" >Fonte</a>
+<center><h3><a href= "http://www.phys.uniroma1.it/biblioteca/ita/ST/storia.html" >Fonte</a></h3></center>
   </div>
 </body>
 
