Footer section added in info pages

--- a/info/alessandrina.html
+++ b/info/alessandrina.html
@@ -81,8 +81,10 @@ Treno fino alla Stazione di Tiburtina   Bus 492 o 71.<br></p2>
 
 <br>
 
-<center><h3><a href= "http://www.alessandrina.librari.beniculturali.it/index.php?it/4/la-storia-della-biblioteca" >Fonte</a></h3></center>
-  </div>
 </body>
-
+<footer>
+	<p4>
+<a href= "http://www.alessandrina.librari.beniculturali.it/index.php?it/4/la-storia-della-biblioteca" >Fonte</a>   Coded by: <a href= "http://www.andrealacava.com" >Andrea Lacava</a> and <a href="http://www.nicholasgiordano.it" >Nicholas Giordano</a>.</p4>
+</footer>
+</div>
 </html>
