--- a/info/chimica.html
+++ b/info/chimica.html
@@ -55,7 +55,11 @@ Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
 </p2>
 <br>
 <br>
-<center><h3><a href= "https://www.chem.uniroma1.it/strutture/biblioteca" >Fonte</a></h3></center>
+<footer>
+	<p4>
+<a href= "https://www.chem.uniroma1.it/strutture/biblioteca" >Fonte</a>   Coded by: <a href= "http://www.andrealacava.com" >Andrea Lacava</a> and <a href="http://www.nicholasgiordano.it" >Nicholas Giordano</a>.</p4>
+</footer>
+
   </div>
 </body>
 
