--- a/info/fisica.html
+++ b/info/fisica.html
@@ -56,8 +56,10 @@ generale e tra il 1921 e il 1923 le dedicarono i primi lavori. Un riflesso di qu
    gli interessi e gli studi della comunità romana dei fisici.<br><br>
 	 <center><p3> Articolo by Prof.ssa Maria Grazia Ianniello.</p3></center></p2>
 <br>
-<center><h3><a href= "http://www.phys.uniroma1.it/biblioteca/ita/ST/storia.html" >Fonte</a></h3></center>
-  </div>
+<footer>
+	<p4>
+<a href= "http://www.phys.uniroma1.it/biblioteca/ita/ST/storia.html" >Fonte</a>   Coded by: <a href= "http://www.andrealacava.com" >Andrea Lacava</a> and <a href="http://www.nicholasgiordano.it" >Nicholas Giordano</a>.</p4>
+</footer></div>
 </body>
 
 </html>
