--- a/info/geologia.html
+++ b/info/geologia.html
@@ -9,15 +9,13 @@
 </head>
 
 <body>
-
+<img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%">	<img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
     <div>
-			<h1><img src="./img/sapienza.jpg" alt="Logo sapienza" width=40% height=20% style="margin-right: 20%">Biblioteca di Geologia</h1>
-      <br>
-			<br>
-    <p1> La biblioteca è situata all’interno della Città Universitaria e precisamente al piano terra del Dipartimento di Scienze della Terra
-       ed è accessibile dall’ingresso lato di Geologia.</p1>
+			<h1>Biblioteca di Geologia</h1>
+    <p2> La biblioteca è situata all’interno della Città Universitaria e precisamente al piano terra del Dipartimento di Scienze della Terra
+       ed è accessibile dall’ingresso lato di Geologia.</p2>
 <br><br>
-<h3>Servizi:</h3>
+<h3>SERVIZI:</h3>
 
 <p2>
 L’accesso alla biblioteca è pubblico. Per usufruire dei servizi è necessario iscriversi compilando un modulo con l’indicazione dei propri dati personali (che verranno trattati conformemente alla legislazione vigente sulla privacy) e consegnando una fotocopia di un documento di identità valido.<br>
@@ -32,6 +30,8 @@ Al momento dell’iscrizione verrà fornito all’utente un codice che gli perme
 <h3>PRESTITO LOCALE:</h3> Di norma possono essere prestati al massimo due volumi per la durata di 15 giorni rinnovabili una sola volta (qualora il documento non sia stato già prenotato da altri). Il prestito locale è personale, l’utente è responsabile dei documenti ricevuti e della loro integrità e non può prestare ad altri le opere ricevute in prestito. L’utente è tenuto a rispettare la data di scadenza del prestito altrimenti, dopo opportuni solleciti, sarà sospeso dal servizio presso tutte le biblioteche del Polo La Sapienza, inizialmente per 30 giorni e, trascorso questo termine, a tempo indeterminato (art. 58 del D.P.R. 417/1995). In caso di smarrimento, o di grave deterioramento, di un documento della biblioteca, l’utente è tenuto a sostituirlo con una nuova copia, se ancora in commercio, o con un documento di pari valore, se esaurito.</p2>
 <br>
 <br>
+<img src="./img/biblio_geologia.jpg" alt="Esterno e Interni" style="float:left; margin: 10px" >
+
 <h3>Orario della Biblioteca:</h3>
 
 <p2>
@@ -44,20 +44,16 @@ Nella fascia serale-notturna (dalle 21.00 alle 8.00), il sabato e la domenica no
 Lunedì-Venerdì : ore 8.30 – 19.00
 <br>
 <br>
-Durante l'orario di apertura con i servizi, la sala lettura sarà ad accesso libero, secondo le modalità consuete. <br>
-Un terzo dei posti a sedere è riservato agli studenti iscritti ai corsi di studio afferenti al Dipartimento di Scienze della Terra.
+Durante l'orario di apertura con i servizi, la sala lettura sarà ad accesso libero, secondo le modalità consuete. Un terzo dei posti a sedere è riservato agli studenti iscritti ai corsi di studio afferenti al Dipartimento di Scienze della Terra.
 </p2>
 <br>
 <br>
-<center>
-    <h3> Foto: </h3>
 
-<img src="./img/biblio_geologia.jpg" alt="Esterno e Interni" ></center>
 
-<br>
-<br>
-
-<a href= "http://www.dst.uniroma1.it/biblioteca" >Fonte</a>
+<footer>
+	<p4>
+<a href= "http://www.dst.uniroma1.it/biblioteca" >Fonte</a>   Coded by: <a href= "http://www.andrealacava.com" >Andrea Lacava</a> and <a href="http://www.nicholasgiordano.it" >Nicholas Giordano</a>.</p4>
+</footer>
   </div>
 </body>
 
