Map page added and some graphical improvments

--- a/info/alessandrina.html
+++ b/info/alessandrina.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%"><img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
+<a href="../home.html" ><img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%"></a><img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
 	<div>
 		<h1>Biblioteca Alessandrina </h1>
 			<p2>La Biblioteca Alessandrina, che è un istituto del Ministero per i  Beni e Attività Culturali, mette a disposizione degli studenti universitari un certo numero di posti per studiare con i propri libri. Essendo tale numero limitato, è necessario occupare un solo posto.
@@ -57,12 +57,12 @@ E-mail: <a href= "mailto://alessandrina@librari.beniculturali.it">alessandrina@l
 <p2>Treno fino alla Stazione di Termini  Bus 310 o 649<br>
 Treno fino alla Stazione di Tiburtina   Bus 492 o 71.<br></p2>
 <br>
-<form action="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
-    <input type="submit" value="Google Maps" />
-</form><br>
+<a href="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
+  <img src="img/icon-maps.png" alt="link on google" style="width:25px;height:25px;border:0;">
+</a><br><br>
 
 	<img src="./img/alessandro_vii.jpg" alt="Alessandro VII" style="width:15%; height:15%; margin: 10px; float:left;">
-	<h3> Note Storiche:</h3>
+	<h3> NOTE STORICHE:</h3>
 	<p2>
 	La Biblioteca Universitaria Alessandrina fu fondata nel 1667, su progetto e per volontà di Papa Alessandro VII, Fabio Chigi, come biblioteca dello Studium Urbis.
 	 Il nucleo storico delle raccolte della biblioteca è costituito dai duplicati della biblioteca Chigiana (1644),
@@ -78,7 +78,6 @@ Treno fino alla Stazione di Tiburtina   Bus 492 o 71.<br></p2>
       specializzazione umanistica ed interessanti e pressoché esaustive testimonianze sull'editoria e tipografia romana otto-novecentesca.
     La Biblioteca Universitaria Alessandrina  è una biblioteca pubblica statale che dipende, dal 1975, dal Ministero per i Beni e le Attività Culturali.</p2>
 <br>
-
 <br>
 
 </body>
