--- a/info/chimica.html
+++ b/info/chimica.html
@@ -5,18 +5,18 @@
 <head>
 	<title>Biblioteca di Chimica</title>
     <link href="../style/global.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body>
-<img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%">	<img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
+<a href="../home.html" ><img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%"></a>	<img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
     <div>
 			<h1>Biblioteca di Chimica</h1>
+			<center><img src="img/chimica.jpg" alt="biblioteca di chimica" height="185px;"width="560px;"></center><br>
     <p2> La Biblioteca "Gabriello Illuminati" si è trasferita (per lavori di ristrutturazione) al terzo piano dell’edificio Caglioti del Dipartimento di Chimica.
       L’accesso alla biblioteca è consentito a tutti gli interessati alla consultazione di periodici, trattati, collane etc., reperibili presso la biblioteca.
       Sono a disposizione dell’utenza due sale per lo studio e la consultazione ed è attiva la attiva la rete Wi-Fi.</p2>
 <br><br>
-<h3>Prestito: </h3>
+<h3>PRESTITO: </h3>
 <p2>Il servizio di prestito è riservato agli studenti della Facolta’ di SMFN.
    Può essere richiesto per la durata massima di 15 giorni previo deposito del tesserino della biblioteca e compilazione dell’apposito modulo.
    Il prestito può essere prorogato di ulteriori 15 giorni.
@@ -25,25 +25,22 @@
     le pubblicazioni stampate fino al 1950 facenti parte del fondo pregio. </p2>
 <br>
 <br>
-<h3>Servizi:</h3>
-
+<h3>SERVIZI:</h3>
 <p2>E’ possibile richiedere in consultazione libri, periodici, trattati e collane disponibili presso la biblioteca compilando un apposito modulo e presentando un documento d’identificazione. <br>
   I testi in consultazione devono essere restituiti al momento di lasciare la biblioteca o comunque almeno 30 minuti prima della chiusura giornaliera.</p2>
-<br>
-<br>
 
+<br>
+<br>
 <h3>COME ARRIVARE:</h3>
 <p2>
 Dalla Stazione Termini:<br>
 BUS:310 o 649 <br>
 Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
 </p2>
- <br>
-<form action="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
-    <input type="submit" value="Google Maps" />
-</form><br><br>
-
-<h3> Note Storiche:</h3>
+<a href="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
+  <img src="img/icon-maps.png" alt="link on google" style="width:25px;height:25px;border:0;">
+</a><br><br>
+<h3> NOTE STORICHE:</h3>
 <p2> Le origini dell'attuale biblioteca del dipartimento di Chimica risalgono all'anno 1872 quando Stanislao Cannizzaro venne chiamato a Roma e tenne presso l'Ateneo i corsi di chimica inorganica e organica, diresse la scuola pratica e organizzò un Istituto di chimica ben attrezzato. Ebbe la sua sede, per sessanta anni circa, nell'orto del vecchio convento di S. Lorenzo in Panisperna (via Panisperna 89) sino a quando, nel corso dell'anno accademico 1939-1940, l'Istituto e la biblioteca vennero trasferiti presso l'attuale città universitaria.
   L'inventario dell'ufficio amministrativo della Regia Università di Roma, riporta buoni del 1882 e 1883 con elenchi di materiale librario acquistato presso le antiche librerie Loescher e Hoepli per “uso dell'Istituto Chimico”, probabile sanatoria di una dotazione libraria degli anni 1872-1881.
   Nel 1944, poco prima dell’attentato a via Rasella, la biblioteca venne salvata dal prof. Giordano Giacomello che Parravano aveva chiamato all’Istituto Chimico di Roma nel1932(*). Si presentarono un ufficiale della Wehrmacht e due soldati delle SS che avevano ricevuto l’ordine di requisire i volumi della biblioteca in lingua tedesca per spedirli a Berlino distrutta dai bombardamenti. L’ufficiale – che era stato allievo di Giacomello quando era docente a Vienna presso la cattedra del prof. Hermann Mark – lo riconobbe e il professore lo convinse, a guerra quasi finita, a non depauperare il posseduto della biblioteca negoziandone, quindi, il sequestro ma evitandone il trasferimento.
@@ -51,7 +48,7 @@ Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
   Con l'istituzione del Servizio Generale Chimico prima e del dipartimento di Chimica poi, i servizi della biblioteca vengono definitivamente centralizzati, pur se fisicamente dislocati su sedi diverse, presso l'edificio Cannizzaro e l'edificio Caglioti del Dipartimento.
   L'attuale patrimonio della Biblioteca – dal 1989 dedicata al prof. Gabriello Illuminati - ha carattere specialistico con materiale vario su discipline afferenti alla chimica, possiede inoltre antiche e pregiate pubblicazioni sia periodiche che a carattere monografico.
 
-  (*) Questa informazione è stata desunta da una conversazione avuta con il figlio del prof. Giordano Giacomello,  prof. Pierluigi  Giacomello , il 5 novembre 2013
+  (*) Questa informazione è stata desunta da una conversazione avuta con il figlio del prof. Giordano Giacomello,  prof. Pierluigi  Giacomello , il 5 novembre 2013.
 </p2>
 <br>
 <br>
@@ -59,8 +56,6 @@ Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
 	<p4>
 <a href= "https://www.chem.uniroma1.it/strutture/biblioteca" >Fonte</a>   Coded by: <a href= "http://www.andrealacava.com" >Andrea Lacava</a> and <a href="http://www.nicholasgiordano.it" >Nicholas Giordano</a>.</p4>
 </footer>
-
   </div>
 </body>
-
 </html>
