--- a/info/fisica.html
+++ b/info/fisica.html
@@ -5,11 +5,9 @@
 <head>
 	<title>Biblioteca di Fisica</title>
     <link href="../style/global.css" rel="stylesheet" type="text/css">
-
 </head>
-
 <body>
-	<img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%">	<img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
+<a href="../home.html" ><img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%"></a>	<img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
 	<div>
 	<h1>Biblioteca di Fisica</h1>
     <p2> La nuova sede della Biblioteca di Fisica è stata inaugurata nel 2005, dispone di due sale lettura con 90 posti complessivi
@@ -54,8 +52,19 @@ generale e tra il 1921 e il 1923 le dedicarono i primi lavori. Un riflesso di qu
    Dopo gli anni bui della guerra, negli anni della ricostruzione, inizierà con Edoardo Amaldi
    un’altra fase di evoluzione per la Biblioteca, che rifletterà puntualmente i grandi eventi internazionali della fisica,
    gli interessi e gli studi della comunità romana dei fisici.<br><br>
-	 <center><p3> Articolo by Prof.ssa Maria Grazia Ianniello.</p3></center></p2>
+	 <center><p3> Articolo scritto dalla Prof.ssa Maria Grazia Ianniello.</p3></center></p2>
 <br>
+
+<h3>COME ARRIVARE:</h3>
+<p2>
+Dalla Stazione Termini:<br>
+BUS:310 o 649 <br>
+Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
+</p2>
+<a href="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
+  <img src="img/icon-maps.png" alt="link on google" style="width:25px;height:25px;border:0;">
+</a>
+<br><br>
 <footer>
 	<p4>
 <a href= "http://www.phys.uniroma1.it/biblioteca/ita/ST/storia.html" >Fonte</a>   Coded by: <a href= "http://www.andrealacava.com" >Andrea Lacava</a> and <a href="http://www.nicholasgiordano.it" >Nicholas Giordano</a>.</p4>
