--- a/info/geologia.html
+++ b/info/geologia.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%">	<img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
+<a href="../home.html" ><img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%"></a>	<img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
     <div>
 			<h1>Biblioteca di Geologia</h1>
     <p2> La biblioteca è situata all’interno della Città Universitaria e precisamente al piano terra del Dipartimento di Scienze della Terra
@@ -34,8 +34,7 @@ Al momento dell’iscrizione verrà fornito all’utente un codice che gli perme
 
 <h3>Orario della Biblioteca:</h3>
 
-<p2>
-Dal giorno 27 aprile 2015 la sala lettura della biblioteca di Scienze della Terra è stata automatizzata per poterne usufruire in orario notturno e nelle giornate di sabato, domenica e festivi.<br>
+<p2>Dal giorno 27 aprile 2015 la sala lettura della biblioteca di Scienze della Terra è stata automatizzata per poterne usufruire in orario notturno e nelle giornate di sabato, domenica e festivi.<br>
 
 L’accesso - in tale fascia - sarà consentito ai soli studenti di Sapienza in regola con l’iscrizione per l’anno accademico in corso e muniti di apposita tessera di riconoscimento personale (badge). Per info sulle modalità di ritiro/richiesta card clicca qui.
 Nella fascia serale-notturna (dalle 21.00 alle 8.00), il sabato e la domenica non saranno erogati servizi.<br><br>
@@ -48,7 +47,16 @@ Durante l'orario di apertura con i servizi, la sala lettura sarà ad accesso lib
 </p2>
 <br>
 <br>
-
+<br>
+<h3>COME ARRIVARE:</h3>
+<p2>
+Dalla Stazione Termini:<br>
+BUS:310 o 649 <br>
+Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
+</p2><br>
+<a href="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
+  <img src="img/icon-maps.png" alt="link on google" style="width:25px;height:25px;border:0;">
+</a><br><br>
 
 <footer>
 	<p4>
