added button for link home with map

--- a/home.html
+++ b/home.html
@@ -110,7 +110,7 @@
         </ul>
     </div>
 	</div>
-<center>	<a id="bottone" href="javascript:admin();">ADMIN</a> <a id="bottone" href="javascript:info();">API</a></center>
+<center><a id="bottone" href="javascript:admin();">ADMIN</a> <a id="bottone" href="javascript:info();">API</a> <a id="bottone" href="map.html">MAP</a> </center>
 </body>
 
 </html>
