updated info pages with link to map

--- a/info/alessandrina.html
+++ b/info/alessandrina.html
@@ -38,6 +38,7 @@ In biblioteca è attiva un'area wireless per tutti coloro che possiedono la pass
 <p2>
 La Biblioteca si trova all'interno dell Città Universitaria dell'Università degli Studi di Roma La Sapienza, al 4. piano del Palazzo del Rettorato.<br>
 Indirizzo: Piazzale Aldo Moro, 5 - 00185 Roma<br>
+<a href="../map.html">Link alla mappa</a><br>
 
 Tel: 06/44740220 (Centralino)<br>
 
