--- a/info/chimica.html
+++ b/info/chimica.html
@@ -35,20 +35,21 @@
 <p2>
 Dalla Stazione Termini:<br>
 BUS:310 o 649 <br>
-Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
-</p2>
+Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br></p2>
+<a href="../map.html">Link alla mappa</a><br>
 <a href="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
   <img src="img/icon-maps.png" alt="link on google" style="width:25px;height:25px;border:0;">
 </a><br><br>
 <h3> NOTE STORICHE:</h3>
-<p2> Le origini dell'attuale biblioteca del dipartimento di Chimica risalgono all'anno 1872 quando Stanislao Cannizzaro venne chiamato a Roma e tenne presso l'Ateneo i corsi di chimica inorganica e organica, diresse la scuola pratica e organizzò un Istituto di chimica ben attrezzato. Ebbe la sua sede, per sessanta anni circa, nell'orto del vecchio convento di S. Lorenzo in Panisperna (via Panisperna 89) sino a quando, nel corso dell'anno accademico 1939-1940, l'Istituto e la biblioteca vennero trasferiti presso l'attuale città universitaria.
+<p2> Le origini dell'attuale biblioteca del dipartimento di Chimica risalgono all'anno 1872 quando Stanislao Cannizzaro venne chiamato a Roma e tenne presso l'Ateneo i corsi di chimica inorganica e organica, diresse la scuola pratica e organizzò un Istituto di chimica ben attrezzato.<br>
+	Ebbe la sua sede, per sessanta anni circa, nell'orto del vecchio convento di S. Lorenzo in Panisperna (via Panisperna 89) sino a quando, nel corso dell'anno accademico 1939-1940, l'Istituto e la biblioteca vennero trasferiti presso l'attuale città universitaria.<br>
   L'inventario dell'ufficio amministrativo della Regia Università di Roma, riporta buoni del 1882 e 1883 con elenchi di materiale librario acquistato presso le antiche librerie Loescher e Hoepli per “uso dell'Istituto Chimico”, probabile sanatoria di una dotazione libraria degli anni 1872-1881.
-  Nel 1944, poco prima dell’attentato a via Rasella, la biblioteca venne salvata dal prof. Giordano Giacomello che Parravano aveva chiamato all’Istituto Chimico di Roma nel1932(*). Si presentarono un ufficiale della Wehrmacht e due soldati delle SS che avevano ricevuto l’ordine di requisire i volumi della biblioteca in lingua tedesca per spedirli a Berlino distrutta dai bombardamenti. L’ufficiale – che era stato allievo di Giacomello quando era docente a Vienna presso la cattedra del prof. Hermann Mark – lo riconobbe e il professore lo convinse, a guerra quasi finita, a non depauperare il posseduto della biblioteca negoziandone, quindi, il sequestro ma evitandone il trasferimento.
-  La consistenza patrimoniale della biblioteca dell'Istituto Chimico si è accresciuta con il successivo accorpamento delle biblioteche minori, ma altamente specialistiche, degli Istituti di chimica analitica, chimica fisica, chimica organica e chimica inorganica e generale, assumendo un suo specifico carattere di centralità nel 1968.
-  Con l'istituzione del Servizio Generale Chimico prima e del dipartimento di Chimica poi, i servizi della biblioteca vengono definitivamente centralizzati, pur se fisicamente dislocati su sedi diverse, presso l'edificio Cannizzaro e l'edificio Caglioti del Dipartimento.
-  L'attuale patrimonio della Biblioteca – dal 1989 dedicata al prof. Gabriello Illuminati - ha carattere specialistico con materiale vario su discipline afferenti alla chimica, possiede inoltre antiche e pregiate pubblicazioni sia periodiche che a carattere monografico.
-
-  (*) Questa informazione è stata desunta da una conversazione avuta con il figlio del prof. Giordano Giacomello,  prof. Pierluigi  Giacomello , il 5 novembre 2013.
+  Nel 1944, poco prima dell’attentato a via Rasella, la biblioteca venne salvata dal prof. Giordano Giacomello che Parravano aveva chiamato all’Istituto Chimico di Roma nel1932(*). <br>
+	Si presentarono un ufficiale della Wehrmacht e due soldati delle SS che avevano ricevuto l’ordine di requisire i volumi della biblioteca in lingua tedesca per spedirli a Berlino distrutta dai bombardamenti. L’ufficiale – che era stato allievo di Giacomello quando era docente a Vienna presso la cattedra del prof. Hermann Mark – lo riconobbe e il professore lo convinse, a guerra quasi finita, a non depauperare il posseduto della biblioteca negoziandone, quindi, il sequestro ma evitandone il trasferimento.<br>
+  La consistenza patrimoniale della biblioteca dell'Istituto Chimico si è accresciuta con il successivo accorpamento delle biblioteche minori, ma altamente specialistiche, degli Istituti di chimica analitica, chimica fisica, chimica organica e chimica inorganica e generale, assumendo un suo specifico carattere di centralità nel 1968.<br>
+  Con l'istituzione del Servizio Generale Chimico prima e del dipartimento di Chimica poi, i servizi della biblioteca vengono definitivamente centralizzati, pur se fisicamente dislocati su sedi diverse, presso l'edificio Cannizzaro e l'edificio Caglioti del Dipartimento.<br>
+  L'attuale patrimonio della Biblioteca – dal 1989 dedicata al prof. Gabriello Illuminati - ha carattere specialistico con materiale vario su discipline afferenti alla chimica, possiede inoltre antiche e pregiate pubblicazioni sia periodiche che a carattere monografico.<br>
+  (*) Questa informazione è stata desunta da una conversazione avuta con il figlio del prof. Giordano Giacomello,  prof. Pierluigi  Giacomello , il 5 novembre 2013.<br>
 </p2>
 <br>
 <br>
