--- a/info/fisica.html
+++ b/info/fisica.html
@@ -61,6 +61,7 @@ Dalla Stazione Termini:<br>
 BUS:310 o 649 <br>
 Metro: Linea B fino al Policlinico Umberto I tram 3 o 19 <br>
 </p2>
+<a href="../map.html">Link alla mappa</a><br>
 <a href="https://www.google.it/maps/place/Palazzo+del+Rettorato/@41.9030771,12.5129376,17z/data=!3m1!4b1!4m5!3m4!1s0x132f619da4adeb5d:0x8558a2dbf6f699eb!8m2!3d41.9030771!4d12.5151263">
   <img src="img/icon-maps.png" alt="link on google" style="width:25px;height:25px;border:0;">
 </a>
