--- a/home.html
+++ b/home.html
@@ -19,7 +19,6 @@
 	var url="http://localhost";
 	var port=":8081";
     $.getJSON(url+port+"/1", function(result){
-         $("n1").append(result.nome);
          $("v1").append(result.edificio);
          $("nol1").append(result.noleggio);
          $("h241").append(result.h24);
@@ -27,7 +26,6 @@
          $("posti1").append(result.postazioni);
     });
     $.getJSON(url+port+"/2", function(result){
-         $("n2").append(result.nome);
          $("v2").append(result.edificio);
          $("nol2").append(result.noleggio);
          $("h242").append(result.h24);
@@ -35,7 +33,6 @@
          $("posti2").append(result.postazioni);
     });
     $.getJSON(url+port+"/3", function(result){
-         $("n3").append(result.nome);
          $("v3").append(result.edificio);
          $("nol3").append(result.noleggio);
          $("h243").append(result.h24);
@@ -43,7 +40,6 @@
          $("posti3").append(result.postazioni);
     });
     $.getJSON(url+port+"/4", function(result){
-         $("n4").append(result.nome);
          $("v4").append(result.edificio);
          $("nol4").append(result.noleggio);
          $("h244").append(result.h24);
@@ -62,7 +58,7 @@
     <center><img src="logo.png"></center>
 	<div id="biblioteca-table" class="clear">
     <div class="singola">
-        <h3>Biblioteca Di Geologia<span><o1></span></h3>
+        <h3>Biblioteca<br> Di Geologia<span><o1></span></h3>
         <a class="info" href="info/geologia.html">Info</a>
         <ul>
             <li><b><v1></b></li>
@@ -74,7 +70,7 @@
         </ul>
     </div>
     <div class="singola">
-        <h3>Biblioteca Di Chimica<span><o2></span></h3>
+        <h3>Biblioteca<br> Di Chimica<span><o2></span></h3>
         <a class="info" href="info/chimica.html">Info</a>
         <ul>
             <li><b><v2></b></li>
@@ -86,7 +82,7 @@
         </ul>
     </div>
     <div class="singola">
-        <h3>Biblioteca Alessandrina<span><o3></span></h3>
+        <h3>Biblioteca<br> Alessandrina<span><o3></span></h3>
         <a class="info" href="info/alessandrina.html">Info</a>
         <ul>
             <li><b><v3></b></li>
@@ -98,7 +94,7 @@
         </ul>
     </div>
     <div class="singola">
-        <h3>Biblioteca Di Fisica<span><o4></span></h3>
+        <h3>Biblioteca<br> Di Fisica<span><o4></span></h3>
         <a class="info" href="info/fisica.html">Info</a>
         <ul>
             <li><b><v4></b></li>
