--- a/info/alessandrina.html
+++ b/info/alessandrina.html
@@ -4,10 +4,10 @@
 
 <head>
 	<title>Biblioteca Alessandrina</title>
+	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="../style/global.css" rel="stylesheet" type="text/css">
 
 </head>
-
 <body>
 <a href="../home.html" ><img src="./img/sapienza.png" alt="Logo sapienza" style="margin-left: 10%"></a><img src="./img/sbs.png" alt="Sistema Biblioteche Sapienza" style="margin-left: 12%;">
 	<div>
