--- a/info/geologia.html
+++ b/info/geologia.html
@@ -4,8 +4,8 @@
 
 <head>
 	<title>Biblioteca di Geologia</title>
-    <link href="../style/global.css" rel="stylesheet" type="text/css">
-
+	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+		<link href="../style/global.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
