--- a/info/chimica.html
+++ b/info/chimica.html
@@ -4,6 +4,7 @@
 
 <head>
 	<title>Biblioteca di Chimica</title>
+	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="../style/global.css" rel="stylesheet" type="text/css">
 </head>
 
